@startuml game_diagram
package com.gamingroom {

    class GameService {
        - games: List<Game>
        - nextGameId: long
        + addGame(name: String): Game
        + getGame(index: int): Game
        + getGameCount(): int
    }

    class Game {
        - id: long
        - name: String
        + getId(): long
        + getName(): String
        + toString(): String
    }

    class ProgramDriver {
        + main(): void
    }

    class SingletonTester {
        + testSingleton(): void
    }

    ProgramDriver ..> GameService : << uses >>
    GameService "0..*" --> Game
    SingletonTester ..> GameService : << uses >>
}
@enduml
